Working model before MTE

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,11 +2,12 @@
     <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
       <mat-icon>token</mat-icon>
     </button>
-    <span><a [routerLink]="'/'">Safe and Found</a></span>
+    <span>Safe and Found</span>
     <span class="example-spacer"></span>
-    <button mat-icon-button class="example-icon">
+
+     <a [routerLink]="'/all_posts'"><button mat-icon-button class="example-icon">
       <mat-icon>search</mat-icon>
-    </button>
+    </button></a>
     <button mat-icon-button class="example-icon">
         <mat-icon>add_circle</mat-icon>
       </button>
