--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -13,7 +13,7 @@
                   </div>
                   &nbsp;
                   <div class="container text-center">
-                    <button type="submit" mat-raised-button color="primary">Just Browsing</button>
+                    <button type="submit" mat-raised-button color="primary" (click)="goToAll()">Just Browsing</button>
                   </div>
                 
             </div>
