--- a/src/app/pages/all-posts/all-posts.component.html
+++ b/src/app/pages/all-posts/all-posts.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row" style="margin-top: 20px">
             <div class="col-md-8 offset-md-2">
-                <mat-card *ngFor="let p of posts" class="mat-elevation-z0">
+                <mat-card *ngFor="let p of posts" class="mat-elevation-z0" class="red-border">
                     <mat-card-header>
                         <mat-card-title>
                              {{p.itemName}}
