--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,6 +5,11 @@
     <span>Safe and Found</span>
     <span class="example-spacer"></span>
 
+    <mat-form-field appearance="fill" class="child">
+      <mat-label>Search for an item.....</mat-label>
+      <input matInput>
+    </mat-form-field>
+
      <a [routerLink]="'/all_posts'"><button mat-icon-button class="example-icon">
       <mat-icon>search</mat-icon>
     </button></a>
