--- a/src/app/pages/all-posts/all-posts.component.html
+++ b/src/app/pages/all-posts/all-posts.component.html
@@ -2,7 +2,10 @@
     <div class="container">
         <div class="row" style="margin-top: 20px">
             <div class="col-md-8 offset-md-2">
-                <mat-card *ngFor="let p of posts" class="mat-elevation-z0" class="red-border">
+                <mat-tab-group>
+
+                <mat-tab label="All Missing Items">
+                <mat-card *ngFor="let p of missing_posts" class="mat-elevation-z0" class="red-border">
                     <mat-card-header>
                         <mat-card-title>
                              {{p.itemName}}
@@ -17,6 +20,39 @@
                         <mat-chip-option disabled>{{p.tag}}</mat-chip-option>
                         <mat-chip-option disabled>Cash Prize : {{p.cashPrize}}</mat-chip-option>
                     </mat-chip-listbox>
-                    <button (click)="displayContact(p)" mat-button color="accent">Contact Owner</button>
+                    <button (click)="displayContact(p)" mat-button color="accent">Let The Owner Know You've Found Their Item</button>
                     </mat-card-content>
-</mat-card>
+                </mat-card>
+                <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+                </mat-tab>
+
+                <mat-tab label="All Found Items">
+                    <mat-card *ngFor="let p of missing_keys" class="mat-elevation-z0" class="green-border">
+
+                        <mat-card-header>
+                            <mat-card-title>
+                                 {{p.block}}-{{p.roomNumber}}
+                            </mat-card-title>
+                            <mat-card-subtitle>
+                                {{p.description}}
+                            </mat-card-subtitle>
+
+                            <div mat-card-avatar class="example-header-image" alt="keys"></div>
+                         </mat-card-header>
+    
+                        <mat-card-content>
+                        <mat-chip-listbox>
+                            <mat-chip-option disabled>{{p.tag}}</mat-chip-option>
+                            <mat-chip-option disabled>Cash Prize : {{p.cashPrize}}</mat-chip-option>
+                        </mat-chip-listbox>
+                        <button (click)="displayContact(p)" mat-button color="accent">Contact The Person Who Found Your Keys</button>
+                        </mat-card-content>
+                    </mat-card>
+                    </mat-tab>
+
+                </mat-tab-group>
+            </div>
+        </div>
+    </div>
+</div>
+                
