--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,8 +1,9 @@
 <div class="bootstrap-wrapper">
     <div class="container">
-        <div class="row" style="margin-top: 150px">
+        <div class="row" style="margin-top: 120px">
             <div class="col-md-6 offset-md-3">
-                <h1 class="text-center">Welcome to SafeAndFound ! </h1>
+              
+              <header><h1 class="text-center">Welcome to SafeAndFound ! </h1></header>
 
                 <div class="container text-center">
                     <button mat-raised-button (click)="goToMissing()" color="warn">I've lost an item and I want to report it</button>
@@ -15,6 +16,9 @@
                   <div class="container text-center">
                     <button type="submit" mat-raised-button color="primary" (click)="goToAll()">Just Browsing</button>
                   </div>
+
+                  
+
                 
             </div>
         </div>
