--- a/src/app/pages/found-form/found-form.component.html
+++ b/src/app/pages/found-form/found-form.component.html
@@ -93,17 +93,17 @@
                                 required
                                 name="blockNumber"
                                 [(ngModel)]="keyFoundPost.blockNumber">
-                                    <option value="b1">B1</option>
-                                    <option value="b2">B2</option>
-                                    <option value="b3">B3</option>
-                                    <option value="b4">B4</option>
-                                    <option value="b5">B5</option>
-                                    <option value="b6">B6</option>
-                                    <option value="b7">B7</option>
-                                    <option value="g1">G1</option>
-                                    <option value="g2">G2</option>
-                                    <option value="g3">G3</option>
-                                    <option value="g4">G4</option>
+                                    <option value="B1">B1</option>
+                                    <option value="B2">B2</option>
+                                    <option value="B3">B3</option>
+                                    <option value="B4">B4</option>
+                                    <option value="B5">B5</option>
+                                    <option value="B6">B6</option>
+                                    <option value="B7">B7</option>
+                                    <option value="G1">G1</option>
+                                    <option value="G2">G2</option>
+                                    <option value="G3">G3</option>
+                                    <option value="G4">G4</option>
                                   </select>
                             </mat-form-field>
 
