--- a/src/styles.css
+++ b/src/styles.css
@@ -2,9 +2,13 @@
 
 html, body { height: 100%; background-color: #f5f5f5;}
 body { 
-    margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;
-    background-image: url('assets/wallpaper.png');; 
+    margin: 0; font-family: Roboto, "Helvetica Neu;e", sans-serif;
+    background-image: url('assets/wallpaper.png');
+    background-repeat: repeat;
+    
 }
+
+
 
 .text-center{
     text-align:center;
