--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -5,6 +5,10 @@
   .orange-navbar{
     background-color: rgba(255, 166, 0, 0.751);
     position: relative;
+    position: sticky;
+    position: -webkit-sticky; /* For macOS/iOS Safari */
+    top: 0; /* Sets the sticky toolbar to be on top */
+    z-index: 1000000000; /* Ensure that your app's content doesn't overlap the toolbar */
   }
 
   .child{
