--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; background-color: #f5f5f5;}
+html, body { height: 100%;}
 body { 
     margin: 0; font-family: Roboto, "Helvetica Neu;e", sans-serif;
     background-image: url('assets/wallpaper.png');
     background-repeat: repeat;
+    background-attachment: fixed;
     
 }
 
